[package]
name = "mach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["multipart"] }
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.16", features = ["derive"] }
futures = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["tokio", "server-auto", "http1"] }
reqwest = { version = "0.11.23", features = ["multipart", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha3 = "0.10.8"
sled = "0.34.7"
tempdir = "0.3.7"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["tracing", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "serde",
    "serde_json",
    "chrono",
    "json",
] }
trait-variant = "0.1.1"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
wasi-common = "16.0.0"
wasmtime = "16.0.0"
wasmtime-wasi = { version = "16.0.0", features = ["tokio"] }
